--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
     Copyright (C) 2023 The Android Open Source Project
 
@@ -16,9 +15,15 @@
 -->
 
 <resources>
-    <string name="app_name">Task Completed</string>
+    <string name="app_name">Compose Quadrant</string>
 
-    <!-- Task Completed Screen -->
-    <string name="all_task_completed">All tasks completed</string>
-    <string name="nice_work">Nice work!</string>
+    <!-- Compose Quadrant screen -->
+    <string name="first_title">Text composable</string>
+    <string name="first_description">Displays text and follows the recommended Material Design guidelines.</string>
+    <string name="second_title">Image composable</string>
+    <string name="second_description">Creates a composable that lays out and draws a given Painter class object.</string>
+    <string name="third_title">Row composable</string>
+    <string name="third_description">A layout composable that places its children in a horizontal sequence.</string>
+    <string name="fourth_title">Column composable</string>
+    <string name="fourth_description">A layout composable that places its children in a vertical sequence.</string>
 </resources>
