--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,29 +1,8 @@
-<!--
-    Copyright (C) 2023 The Android Open Source Project
-
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
-
-         https://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
--->
-
 <resources>
-    <string name="app_name">Compose Quadrant</string>
-
-    <!-- Compose Quadrant screen -->
-    <string name="first_title">Text composable</string>
-    <string name="first_description">Displays text and follows the recommended Material Design guidelines.</string>
-    <string name="second_title">Image composable</string>
-    <string name="second_description">Creates a composable that lays out and draws a given Painter class object.</string>
-    <string name="third_title">Row composable</string>
-    <string name="third_description">A layout composable that places its children in a horizontal sequence.</string>
-    <string name="fourth_title">Column composable</string>
-    <string name="fourth_description">A layout composable that places its children in a vertical sequence.</string>
+    <string name="app_name">Business Card</string>
+    <string name="developer_name_text">Jennifer Doe</string>
+    <string name="developer_desc_text">Android Developer Extraordinaire</string>
+    <string name="phone_no_text">+11 (123) 444 555 666</string>
+    <string name="domain_text">AndroidDev</string>
+    <string name="email_text">jen.doe@android.com</string>
 </resources>
